--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/baystaub/Book-search#readme",
   "dependencies": {
+    "bootstrap": "^5.0.2",
     "express": "^4.17.1",
     "mongoose": "^5.13.3"
   }
