--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/baystaub/Book-search#readme",
   "dependencies": {
     "bootstrap": "^5.0.2",
+    "concurrently": "^6.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.3"
   }
