--- a/package.json
+++ b/package.json
@@ -21,8 +21,15 @@
   },
   "homepage": "https://github.com/baystaub/Book-search#readme",
   "dependencies": {
+    "@apollo/client": "^3.4.1",
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-client": "^2.6.10",
     "bootstrap": "^5.0.2",
+    "concurrently": "^6.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.13.3"
+    "graphql": "^15.5.1",
+    "i": "^0.3.6",
+    "mongoose": "^5.13.3",
+    "npm": "^7.20.3"
   }
 }
