--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@apollo/client": "^3.4.1",
     "@apollo/react-hooks": "^4.0.0",
     "apollo-client": "^2.6.10",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.1.0",
     "concurrently": "^6.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "i": "^0.3.6",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^5.13.3",
-    "npm": "^7.20.3"
+    "npm": "^7.20.3",
+    "react-bootstrap": "^1.6.1"
   }
 }
