--- a/package.json
+++ b/package.json
@@ -12,15 +12,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^5.1.0"
-  },
+  "devDependencies": {},
   "dependencies": {
     "@apollo/client": "^3.4.1",
     "@apollo/react-hooks": "^4.0.0",
     "apollo-client": "^2.6.10",
     "bootstrap": "^5.1.0",
-    "concurrently": "^6.2.0",
+    "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "i": "^0.3.6",
