--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.13.5",
     "npm": "^7.20.5",
     "react-bootstrap": "^1.6.1",
+    "serve": "^12.0.0",
     "ts-invariant": "^0.9.1"
   }
 }
