--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apollo-client": "^2.6.10",
     "bootstrap": "^5.1.0",
     "concurrently": "^5.3.0",
+    "debug": "^4.3.2",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "i": "^0.3.6",
